--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,14 @@
 {
-	"ownerNumber": "380944367800",
-	"ownerNumberr": "+380944367800",
-	"botnumber": "380944367800",
-	"cr": "@sparrow",
-	"wa": "wa.me/+380944367800",
+	"ownerNumber": "254792893310",
+	"ownerNumberr": "+254792893310",
+	"botnumber": "254777664303",
+	"cr": "@ginger",
+	"wa": "wa.me/+254792893310",
 	"donate": "we dont take donations...",
-	"ownername": "AKSHAY",
-	"botname":"jarvis",
-	"img":"https://b.top4top.io/s_2024uih200.jpg",
+	"ownername": "gιnger",
+	"botname":"gιngerвoт",
+	"img":"https://telegra.ph/file/65ba2373970a33460762e.jpg",
 	"thumb":"106.jpg",
 	"fakethumb":"106.jpg",
-	"fake": " 〔 ᴊᴀʀᴠɪs 〕𔒝\nʙʏ ᴀᴋsʜᴀʏ™ "
+	"fake": " 〔 ѕĸeтcнyвoт 〕𔒝\nʙʏ ѕĸeтcнy™ "
 }
